--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,10 @@ a {
 .link-card {
   color: #512200;
   background-color: #dcd4cd;
+  padding: 1rem;
+  border-style: solid;
+  border-width: 2px;
+  border-radius: 3px;
 }
 
 .link-card h2 {
