--- a/css/main.css
+++ b/css/main.css
@@ -20,17 +20,23 @@ a {
   padding: 1rem;
   border-style: solid;
   border-width: 2px;
-  border-radius: 3px;
+  border-radius: 8px;
+  border-color: #9a816d;
 }
 
 .link-card h2 {
   font-family: Dosis, sans-serif;
   margin-top: 0;
-
 }
 
 .link-card:hover {
   background-color: #cabdb2;
+}
+
+p {
+  margin: 0 0 1rem;
+  border-bottom: 2px;
+  border-color: #9a816d;
 }
 
 div {
