--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ a {
   background-color: #dcd4cd;
   padding: 1rem;
   border-style: solid;
-  border-width: 2px;
+  border-width: 3px;
   border-radius: 8px;
   border-color: #9a816d;
 }
@@ -27,6 +27,7 @@ a {
 .link-card h2 {
   font-family: Dosis, sans-serif;
   margin-top: 0;
+  margin-bottom: 1rem;
 }
 
 .link-card:hover {
@@ -35,7 +36,7 @@ a {
 
 p {
   margin: 0 0 1rem;
-  border-bottom: 2px;
+  border-bottom: 2px solid;
   border-color: #9a816d;
 }
 
