--- a/css/main.css
+++ b/css/main.css
@@ -38,12 +38,23 @@ p {
   margin: 0 0 1rem;
   border-bottom: 2px solid;
   border-color: #9a816d;
+  padding: 0 0 1rem;
 }
 
 dl {
   font-size: .875rem;
   border-bottom: 2px solid;
   border-color: #9a816d;
+  padding: 0 0 1rem;
+}
+
+dd {
+  display: inline-block;
+}
+
+dt {
+  display: inline-block;
+  font-style: italic;
 }
 
 div {
@@ -61,4 +72,5 @@ div {
   border-color: #785439;
   border-radius: 8px;
   padding: .4em .75em .5em;
+  display: inline-block;
 }
